# VulkanPlatform

./: .gitignore  CMakeLists.txt  README.md  Tutorial.md  glfwCMakeLists.txt  glfw_CMakeLists.txt  readme.txt
androidFramework/include/: androidFileManager.h  androidLogManager.h  androidManager.h
androidFramework/source/: androidFileManager.cpp  androidLogManager.cpp  androidManager.cpp
androidSandbox/: README.md  build.gradle
androidSandbox/app/: build.gradle
androidSandbox/app/src/main/cpp/: CBackend.h  (+1 more)
documents/: CMakeTutorial.md  GitHubTutorial.md  SetupTutorial.md  ToolsTutorial.md  VSCodeTutorial.md  VulkanSetupTutorial.md  VulkanTutorial.md
framework/: CMakeLists.txt  application.cpp  application.h  applicationController.cpp  applicationUtility.cpp  camera.hpp  common.h  context.h  dataStructure.hpp  debugger.cpp  debugger.h  descriptor.cpp  descriptor.h  instance.cpp  instance.h  logicalDevice.cpp  logicalDevice.h  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.h  physicalDevice.hpp  renderProcess.cpp  renderProcess.h  swapchain.cpp  swapchain.h  vulkanBase.cpp  vulkanBase.h  vulkanBaseTexture.cpp
framework/include/: androidManager.h  application.h  camera.hpp  common.h  context.h  controller.h  dataBuffer.hpp  dataStructure.hpp  debugger.h  descriptor.h  glfwManager.h  imageBuffer.h  imageManager.h  instance.h  logManager.h  logicalDevice.h  main.hpp  modelManager.h  object.h  physicalDevice.h  renderProcess.h  renderer.h  shaderManager.h  supervisor.h  swapchain.h  texture.h  vulkanBase.h
framework/source/: androidManager.cpp  application.cpp  applicationUtility.cpp  context.cpp  controller.cpp  debugger.cpp  descriptor.cpp  glfwManager.cpp  imageBuffer.cpp  imageManager.cpp  instance.cpp  logManager.cpp  logicalDevice.cpp  modelManager.cpp  object.cpp  physicalDevice.cpp  renderProcess.cpp  renderer.cpp  shaderManager.cpp  supervisor.cpp  swapchain.cpp  texture.cpp  vulkanBase.cpp
glfwFramework/: CMakeLists.txt
glfwFramework/include/: glfwManager.h
glfwFramework/source/: glfwManager.cpp
legacy_windowsFramework/: CMakeLists.txt
legacy_windowsFramework/include/: glfwManager.h
legacy_windowsFramework/source/: glfwManager.cpp
samples/: HardwareDepthBias.cpp  MultiPhongLightings.cpp  MultiPhongShadows.cpp  ShadowEnvironmentmap.cpp  ShadowMapMove.cpp  SimpleDepthImage.cpp  SimpleEnvironmentmap.cpp  SimpleShadowMap2Shadows.cpp  SimpleShadowMap32Shadows.cpp  SimpleShadowMap64Shadows.cpp  SimpleShadowMap8Shadows.cpp  SimpleShadowMapHWDepthbias.cpp  SimpleShadowMapHard.cpp  SimpleShadowMapMultiple.cpp  SimpleShadowMapShaderDepthbias.cpp  SimpleShadowMapSoft.cpp  SimpleSkybox.cpp  SimpleText.cpp  androidSample.h  appLog.txt  basicTriangles.cpp  bptpc16Texture.cpp  furMark.cpp  gemmCompute.cpp  instanceLog  main.hpp  modelMSAA.cpp  multiCubes.cpp  objModel.cpp  physicalDeviceLog  simpleCompute.cpp  simpleComputeStorageBuffer.cpp  simpleComputeStorageImage.cpp  simpleCubemap.cpp  simpleHallway.cpp  simpleMSAA.cpp  simpleMipmap.cpp  simpleObjLoader.cpp  simpleObjTransform.cpp  simpleParticles.cpp  (+11 more)
samples/android/: androidSample.h
samples/yaml/: BasicTriangles.yaml  Bptpc16Texture.yaml  FurMark.yaml  GemmCompute.yaml  HardwareDepthBias.yaml  MultiCubes.yaml  MultiPhongLightings.yaml  MultiPhongShadows.yaml  ShadowEnvironmentmap.yaml  ShadowMapMove.yaml  SimpleComputeStorageBuffer.yaml  SimpleComputeStorageImage.yaml  SimpleCubemap.yaml  SimpleDepthImage.yaml  SimpleEnvironmentmap.yaml  SimpleMSAA.yaml  SimpleMipmap.yaml  SimpleObjLoader.yaml  SimpleObjTransform.yaml  SimpleParticles.yaml  SimplePhongLighting.yaml  SimplePushConstant.yaml  SimpleShadowMap.yaml  SimpleShadowMap2Shadows.yaml  SimpleShadowMap32Shadows.yaml  SimpleShadowMap64Shadows.yaml  SimpleShadowMap8Shadows.yaml  SimpleShadowMapHWDepthbias.yaml  SimpleShadowMapHard.yaml  SimpleShadowMapMultiple.yaml  SimpleShadowMapShaderDepthbias.yaml  SimpleShadowMapSoft.yaml  SimpleSkybox.yaml  SimpleText.yaml  SimpleTexture.yaml  SimpleTriangle.yaml  SimpleUI.yaml  SimpleUniformBuffer.yaml  SimpleVertexBuffer.yaml  TextureCompute.yaml
sdlFramework/: CMakeLists.txt
sdlFramework/include/: sdlManager.h
sdlFramework/source/: sdlManager.cpp
shaders/basicTriangles/: frag.spv  shader.frag  shader.vert  vert.spv
shaders/basicTriangles/source/: shader.vert
shaders/compute/: comp_compute.spv  compile_compute.bat  frag_compute.spv
shaders/furMark/: frag.spv  shader.frag  shader.vert
shaders/model/: compile_model.bat
shaders/model/source/: compile.bat
shaders/particleCompute/: vert_compute.spv
shaders/simpleCompute/: comp.spv  compile_compute.bat  shader.comp
shaders/simpleCompute/source/: compile.bat  shader.comp
shaders/simplePushConstant/: vert.spv
shaders/simplePushConstant/source/: shader.vert
shaders/simpleShadowMap/: frag.spv  shader.frag  shader.vert  vert.spv
shaders/simpleShadowMap/source/: shader.frag  shader.vert
shaders/simpleUniformBuffer/: shader.vert  vert.spv
shaders/texture/: compile_texture.bat  shader_texture.vert  vert.spv
shaders/texture/source/: shader.vert
vulkanFramework/: CMakeLists.txt
vulkanFramework/include/: application.h  camera.hpp  common.h  computeDescriptor.h  controlNode.h  dataBuffer.hpp  descriptor.h  desktopLogManager.h  entity.h  graphicsDescriptor.h  imageBuffer.h  instance.h  light.h  logManager.h  main.hpp  modelManager.h  object.h  physicalDevice.h  renderProcess.h  renderer.h  shaderManager.h  supervisor.h  swapchain.h  textManager.h  texture.h  timer.h
vulkanFramework/source/: application.cpp  computeDescriptor.cpp  controlNode.cpp  descriptor.cpp  desktopLogManager.cpp  entity.cpp  graphicsDescriptor.cpp  imageBuffer.cpp  instance.cpp  light.cpp  logManager.cpp  logicalDevice.cpp  modelManager.cpp  object.cpp  physicalDevice.cpp  renderProcess.cpp  renderer.cpp  shaderManager.cpp  supervisor.cpp  swapchain.cpp  textManager.cpp  texture.cpp
windowsFramework/: CMakeLists.txt
windowsFramework/include/: glfwManager.h  logManager.h  windowsLogManager.h
windowsFramework/source/: glfwManager.cpp  windowsLogManager.cpp
(+215 files in other folders)
